# stepper_motor_controller

./: CMakeLists.txt  README.md  main.cpp  receive_and_plot_real_time_values.py
images/: screen_recording.webm
scripts/: plot_trajectory.py  receive_and_plot_real_time_values.py
src/: MotorController.cpp  StepperController.cpp  StepperController.h
tests/: CMakeLists.txt  test_stepper_controller.cpp  test_stepper_controller.h
